src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>CH_AccountReferentialId__c</fullName>
        <description>These IDs  will rarely be used so would put near bottom if all fields on one screen or separate tab.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Referential ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AllCustomerAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether we can delete all authorized contact (EntitlementContact).</description>
        <label>All Customer Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_AutoClosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDB Auto Closure</description>
        <label>Auto Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_CAPM_EmailAddress__c</fullName>
        <description>Used to store the input-value of the CAPM Email Address to be able to do a trigger update for the Owner Id later on.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH CAPM Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CARES_ServiceAgreement__c</fullName>
        <description>CARES Service Agreement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CARES Service Agreement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CA_ServiceContract_Status__c</fullName>
        <description>- Active if the system date is equal to or later than the Start Date and equal to or earlier than the End Date.
- Expired if the system date is later than the End Date.
- Inactive if the system date is earlier than the Start Date.</description>
        <formula>IF(
   AND(TODAY() &gt;= StartDate, TODAY()&lt;= EndDate),&apos;Active&apos;,
   IF(TODAY() &gt; EndDate,&apos;Expired&apos;,
   IF(TODAY() &lt; StartDate,&apos;Inactive&apos;,
   &apos;Inactive&apos;
 )))</formula>
        <label>CH Service Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractGroup__c</fullName>
        <description>Gets the Display value Contract Type from Custom Object CH_CDB_ServiceContract_Type based on field CH_CDB_Contract_Type_ID. The grouping of Contract Groups and Contract Types is mastered in CDB. For Release 1 we will not enable capability for Service Contract searches with picklist values in Contract Type or Contract Group fields.</description>
        <formula>TEXT( CH_CDB_ServiceContractType__r.CH_CDB_ContractGroupType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDB Contract Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractId__c</fullName>
        <description>Used as a reference for checking service contracts in CDB</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CDB Contract ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractNumber__c</fullName>
        <description>CDB internal Contract Number field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractType__c</fullName>
        <description>Gets the Display value Contract Type from Custom Object CH_CDB_ServiceContract_Type based on field CH_CDB_Contract_Type_ID. The grouping of Contract Groups and Contract Types is mastered in CDB. For Release 1 we will not enable capability for Service Contract searches with picklist values in Contract Type or Contract Group fields.</description>
        <formula>TEXT(CH_CDB_ServiceContractType__r.CH_CDB_ContractType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDB Contract Type  </label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_CustomerId__c</fullName>
        <description>CDB Customer ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_FollowUpContractId__c</fullName>
        <description>Follow up contract id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Follow-up Contract ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_InvoiceCustomerId__c</fullName>
        <description>Invoice  CDB Customer Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice  CDB Customer Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_PreviousContractId__c</fullName>
        <description>Previous Contract Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Previous Contract ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_Region__c</fullName>
        <description>CDB Region</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ServiceContractType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This new custom field to store the CDB unique id of the contract type. CDB will send us this ID field and based on it we need to get the corresponding values from custom object CH_CDB_ServiceContract_Type to the fields CDB Contract Type and CDB Contract Group</description>
        <label>CDB Contract Type ID</label>
        <referenceTo>CH_CDB_ServiceContractType__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_CountryCode__c</fullName>
        <description>Used to store country code of an account</description>
        <formula>TEXT(Account.CountryCode__c)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CountryName__c</fullName>
        <description>Used to store country name of an account</description>
        <formula>TEXT(Account.Country__c)</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CustomerContractNumber__c</fullName>
        <description>Customer Contract Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ERPSystem__c</fullName>
        <description>ERP System</description>
        <label>ERP System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>P20</fullName>
                </value>
                <value>
                    <fullName>SAP-Blue Planet</fullName>
                </value>
                <value>
                    <fullName>SAP E-Box (NAR)</fullName>
                </value>
                <value>
                    <fullName>NSB ERP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_EntitlementScript__c</fullName>
        <description>Maps to agreements in CDB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entitlement Script</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to lookup authorized entitlement</description>
        <label>Authorized Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>ServiceContract_Entitlement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Hidden_Searchfield__c</fullName>
        <description>The account name is a lookup field on the service contract and not a text field on the service contract.  To search the account names, you need a text field with the name. This field is set by a workflow rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hidden Searchfield</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_InternalCDBServiceType__c</fullName>
        <formula>IF(CONTAINS(CH_CDB_ContractType__c, &apos;Internal&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal CDB Service Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_InvoiceReferentialId__c</fullName>
        <description>Invoice Account Referential ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Account Referential ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_LastFullResyncDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Full Resynch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_LifeCycle__c</fullName>
        <description>Active: If the system date is equal to or later than the Start Date and equal to or earlier than End Date.
Expired: If the system date is later than the End Date. 
Deactive: If the system date is earlier than the Start Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LifeCycle Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_PortalCaseCreationHWS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Case Creation HWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_PortalCaseCreationSWMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CH: US-22337</description>
        <label>Portal Case Creation SW Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_PriceBook__c</fullName>
        <description>Not show in UI. Needed for Entitlement Process mapping, which requires product to exist in default Price Book (as Price Book Entry)</description>
        <label>Price Book</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nokia CARE Price Book</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Project__c</fullName>
        <description>CDB Project</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_RecordTypeCheck__c</fullName>
        <description>To check record type for case handling project. Advantage of keeping this, whenever we have change in record type then no need to add those changes in every rule.</description>
        <formula>RecordType.DeveloperName = &apos;CH_ServiceContract&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_SAP_AccountP20Id__c</fullName>
        <description>Account SAP P20 ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account SAP P20 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SAP_ContractNumber__c</fullName>
        <description>SAP P20 Contract Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP P20 Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SAP_InvoiceP20Id__c</fullName>
        <description>Invoice Account SAP P20 ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Account SAP P20 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SWS_Survey__c</fullName>
        <label>SWS Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Use Legal Entity Setting</fullName>
                    <default>true</default>
                    <label>Use Legal Entity Setting</label>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ServiceContractEntitlementScript__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CH ServiceContractEntitlementScript</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_ServiceContractOwner__c</fullName>
        <formula>IF(BEGINS(Owner:User.Id, &apos;005&apos;), Owner:User.Alias, (IF(BEGINS(Owner:User.Id, &apos;00G&apos;), Owner:Queue.QueueName, &apos;ID should start with either 005 or 00G&apos;)  ))</formula>
        <label>CH Service Contract Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceContractType__c</fullName>
        <description>Service Contract Type</description>
        <label>Service Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Contract</fullName>
                </value>
                <value>
                    <fullName>Vendor Contract</fullName>
                </value>
                <value>
                    <fullName>Internal Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Service_Contract_Type_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Service Contract Type (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_VisibleToCustomer__c</fullName>
        <description>CDB Visible to customer</description>
        <label>CDB Visible to customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_CaresRepairServiceBillToCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cares Repair Service  Bill To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Parent_Contract_Number__c</fullName>
        <description>Created by SRM Team, used to store Parent Contract Number.</description>
        <formula>ParentServiceContract.ContractNumber</formula>
        <label>Parent Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SLA_Report__c</fullName>
        <formula>IF( ISPICKVAL(CH_ERPSystem__c , &apos;P20&apos;) ,  CH_SAP_ContractNumber__c ,  CH_CARES_ServiceAgreement__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HWS SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SalesOrganisation__c</fullName>
        <description>to store the sales organisation value coming from CDB as part of US ES-100</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Organisation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Child_Service_Contract_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Child Service Contract Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDB</fullName>
                </value>
                <value>
                    <fullName>CARES</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCP_Entitlement_Access_Type__c</fullName>
        <label>Entitlement Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NCP_Access_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Entitlement_Relationship__c</fullName>
        <description>Defines if the Entitlement is related to:
- Product (Only related to Product and Product Services in Community)
- Services (Only related to Services Tiles in Community) 
- Product and Services (Related to Product, Product Services and Service Tiles)</description>
        <label>Entitlement Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product and Services</fullName>
                    <default>true</default>
                    <label>Product and Services</label>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_External_Service_Contract_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Service Contract Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_External_Status__c</fullName>
        <label>External Status SP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Horizontal_Customer__c</fullName>
        <label>Horizontal_Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Origin__c</fullName>
        <description>This field should  be set during migration/integration to indicate the source of the Service Contract. Visible only to admins</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDB</fullName>
                </value>
                <value>
                    <fullName>CARES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Role_Id__c</fullName>
        <label>Role Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDViewer</fullName>
                </value>
                <value>
                    <fullName>MaterialViewer</fullName>
                </value>
                <value>
                    <fullName>MDViewer</fullName>
                </value>
                <value>
                    <fullName>SWDkeyuser</fullName>
                </value>
                <value>
                    <fullName>SWDsysadmin</fullName>
                </value>
                <value>
                    <fullName>SWDuser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <listViews>
        <fullName>Service_Contracts_History_for_DV_T</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CH_AccountReferentialId__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>OWNER.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CH_CA_ServiceContract_Status__c</columns>
        <columns>NCP_External_Status__c</columns>
        <columns>CH_CDB_PreviousContractId__c</columns>
        <columns>CH_CDB_ContractId__c</columns>
        <columns>CH_CDB_FollowUpContractId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>ServiceContract.CH_ServiceContract</value>
        </filters>
        <label>Service Contracts History for DV&amp;T</label>
        <sharedTo>
            <group>CH_DVT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Contracts_for_DV_T</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CH_AccountReferentialId__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>OWNER.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>NCP_External_Status__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>ServiceContract.CH_ServiceContract</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Service Contracts for DV&amp;T</label>
        <sharedTo>
            <group>CH_DVT_Admin</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CH_ServiceContract</fullName>
        <active>true</active>
        <description>CH Service Contract</description>
        <label>CARE Service Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCP_Child_Service_Contract</fullName>
        <active>true</active>
        <description>Child Service Contract for Customer Community</description>
        <label>Child Service Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCP_Parent_Service_Contract</fullName>
        <active>true</active>
        <description>Customer Community Parent Service Contract with Entitlements</description>
        <label>Parent Service Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Services_Child_Service_Contract</fullName>
        <active>true</active>
        <label>Other Services-Child Service Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>NCP_Parent_SC_must_have_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;NCP_Parent_Service_Contract&apos;, 
     ISBLANK(AccountId)
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>CARES/CDB Parent Service Contract must have specified AccountId.</errorMessage>
    </validationRules>
</CustomObject>