src/objects/ServiceContract/validationRules/CH_PreventContractNameUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_PreventContractNameUpdate</fullName>
    <active>true</active>
    <description>NOKIASC-34848: To prevent Users to update Contract Name, with exception to System Administrator, Data Loader Profile and Integration API Only Profile, on CARES and Vendor Service Contracts.</description>
    <errorConditionFormula>AND (
							 OR (	
												RecordType.DeveloperName = &apos;CH_ServiceContract&apos;,
												RecordType.DeveloperName = &apos;CH_VendorContract&apos;
												),
								ISCHANGED (Name),
								$Profile.Name != &apos;System Administrator&apos;,
								$Profile.Name != &apos;Data Loader Profile&apos;,
								$Profile.Name != &apos;Integration API Only Profile&apos;
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You are not allowed to Update the Contract Name.</errorMessage>
</ValidationRule>