src/objects/ServiceContract/validationRules/CH_PreventRecordTypeUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_PreventRecordTypeUpdate</fullName>
    <active>true</active>
    <description>NOKIASC-34848: To prevent Users to update Record Type, with exception to System Administrator and Data Loader Profile, on CARES and Vendor Service Contracts.</description>
    <errorConditionFormula>AND (
							 OR (	
												RecordType.DeveloperName = &apos;CH_ServiceContract&apos;,
												RecordType.DeveloperName = &apos;CH_VendorContract&apos;
												),
								ISCHANGED (RecordTypeId),
								$Profile.Name != &apos;System Administrator&apos;,
								$Profile.Name != &apos;Data Loader Profile&apos;
)</errorConditionFormula>
    <errorMessage>You are not allowed to Update the Record Type.</errorMessage>
</ValidationRule>