src/objects/ServiceContract/validationRules/CH_PreventServiceContractCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_PreventServiceContractCreation</fullName>
    <active>true</active>
    <description>NOKIASC-31438: To prevent DV&amp;T Team to create Service Contracts that are not Vendor Contracts.</description>
    <errorConditionFormula>AND (
				 RecordType.DeveloperName != &apos;CH_VendorContract&apos;,
				 $Permission.CH_DVTAdminstration,
				 ISNEW()
)</errorConditionFormula>
    <errorMessage>You are not allowed to Create Service Contracts from this Record Type.</errorMessage>
</ValidationRule>