src/objects/ServiceContract/validationRules/CH_ValidatePaidToEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_ValidatePaidToEndDate</fullName>
    <active>true</active>
    <description>NOKIASC-31032: Should fire when below conditions fail:
- Vendor Contract Record Type.
- Start Date &lt; Paid End Date &lt;=  End Date.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CH_VendorContract&apos;  
, NOT(ISBLANK(CH_PaidToEndDate__c))
, ( ( NOT( StartDate &lt; CH_PaidToEndDate__c ) &amp;&amp; NOT(ISBLANK(StartDate ))) || ( NOT( CH_PaidToEndDate__c &lt;= EndDate) &amp;&amp; (NOT(ISBLANK(EndDate )))) )
)</errorConditionFormula>
    <errorDisplayField>CH_PaidToEndDate__c</errorDisplayField>
    <errorMessage>&quot;Paid End Date&quot; cannot be prior to Start date nor later than End Date&quot;.</errorMessage>
</ValidationRule>