src/objects/ServiceContract/validationRules/CH_ValidateRenegotiationStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_ValidateRenegotiationStartDate</fullName>
    <active>true</active>
    <description>NOKIASC-31033: &quot;Renegotiation Start Date&quot; cannot be prior to &quot;Start Date&quot; nor later than &quot;End Date&quot;.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;CH_VendorContract&apos; ,
NOT(ISBLANK(CH_RenegotiationStartDate__c))
,( ( NOT( StartDate &lt; CH_RenegotiationStartDate__c) &amp;&amp; NOT(ISBLANK(StartDate )))  || ( NOT( CH_RenegotiationStartDate__c &lt; EndDate ) &amp;&amp; (NOT(ISBLANK(EndDate )))) )
)</errorConditionFormula>
    <errorDisplayField>CH_RenegotiationStartDate__c</errorDisplayField>
    <errorMessage>&quot;Renegotiation Start Date&quot; cannot be prior to &quot;Start Date&quot; nor later than &quot;End Date&quot;.</errorMessage>
</ValidationRule>