src/objects/ServiceContract/validationRules/CH_ValidateStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_ValidateStartDate</fullName>
    <active>true</active>
    <description>NOKIASC-31276: Check for Vendor Contract Record Type if &quot;Start Date&quot; is not empty.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CH_VendorContract&apos;,
ISBLANK(StartDate ))</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Please enter a value for the contract Start Date</errorMessage>
</ValidationRule>