src/objects/ServiceContract/validationRules/CH_ValidateVendorAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_ValidateVendorAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordType.Name =&apos;Vendor Contract&apos;,
				OR(TEXT(Account.Type) != &apos;Vendor&apos;
				,
				Account.RecordType.Name !=&apos;Legal Entity&apos;
				)
				
	)</errorConditionFormula>
    <errorMessage>The selected Account for a Vendor Contract must have Record type = Legal Entity and Type = Vendor. Please review these two fields.</errorMessage>
</ValidationRule>