src/objects/ServiceContract/validationRules/NCP_Parent_SC_must_have_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>NCP_Parent_SC_must_have_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;NCP_Parent_Service_Contract&apos;, 
     ISBLANK(AccountId)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>CARES/CDB Parent Service Contract must have specified AccountId.</errorMessage>
</ValidationRule>